deployments/zero/kustomize/zero-controller-manager/base/deployment_patch.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-controller-manager # 资源名称
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - zero-controller-manager
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --kubeconfig=/opt/zero/conf/config
        - --config=/opt/zero/conf/zero-controller-manager.yaml
        - --v=10
        image: "ccr.ccs.tencentyun.com/superproj/zero-controller-manager-amd64:v1.0.0"
        name: zero-controller-manager
        ports:
        - containerPort: 10249
          name: metrics
          protocol: TCP
        - containerPort: 10256
          name: health
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10256
        readinessProbe:
          httpGet:
            path: /readyz
            port: 10256
        startupProbe:
          httpGet:
            path: /healthz
            port: 10256
        volumeMounts:
        - mountPath: /opt/zero/conf/zero-controller-manager.yaml
          name: zero-controller-manager
          subPath: zero-controller-manager.yaml
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: zero-controller-manager.yaml
            path: zero-controller-manager.yaml
          name: zero-controller-manager
        name: zero-controller-manager
